// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Common/Content - Multi Select should hide checkbox panel when not expanded 1`] = `
<pf-multi-select
  clearSelectionsClick={[Function EventEmitter]}
  displayNamePreview="false"
  highlightSelected="false"
  isExpanded="false"
  isLoading="false"
  remoteDataSourceService={[Function RemoteDataSourceService]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  selectedOptions={[Function Array]}
  selectedOptionsChange={[Function EventEmitter]}
  selectedValues={[Function Array]}
  selectedValuesChange={[Function EventEmitter]}
  textField={[Function String]}
  tooltipDir="undefined"
  valueField={[Function String]}
>
  <div
    class="multi-select-container"
    pfclickelsewhere=""
  >
    <div
      class="selections-summary row align-items-center"
    >
      
      <div
        class="select-facade action-item rounded form-control flex-grow-1 d-flex col"
      >
        <span
          class="flex-grow-1 ellipsis-overflowing-text"
          container="body"
          ng-reflect-container="body"
          ng-reflect-ngb-tooltip=""
        >
          
        </span>
        <span>
          <i
            class="k-i-arrow-s k-icon"
            style="padding-left: 0.3rem"
          />
        </span>
      </div>
    </div>
    
  </div>
</pf-multi-select>
`;

exports[`UI/Common/Content - Multi Select should hide the loading indicator when not loading 1`] = `
<pf-multi-select
  clearSelectionsClick={[Function EventEmitter]}
  displayNamePreview="false"
  highlightSelected="false"
  isExpanded={[Function Boolean]}
  isLoading="false"
  remoteDataSourceService={[Function RemoteDataSourceService]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  selectedOptions={[Function Array]}
  selectedOptionsChange={[Function EventEmitter]}
  selectedValues={[Function Array]}
  selectedValuesChange={[Function EventEmitter]}
  textField={[Function String]}
  tooltipDir="undefined"
  valueField={[Function String]}
>
  <div
    class="multi-select-container"
    pfclickelsewhere=""
  >
    <div
      class="selections-summary row align-items-center"
    >
      
      <div
        class="select-facade action-item rounded form-control flex-grow-1 d-flex col"
      >
        <span
          class="flex-grow-1 ellipsis-overflowing-text"
          container="body"
          ng-reflect-container="body"
          ng-reflect-ngb-tooltip=""
        >
          
        </span>
        <span>
          <i
            class="k-i-arrow-s k-icon"
            style="padding-left: 0.3rem"
          />
        </span>
      </div>
    </div>
    
    <div
      class="selections-container d-flex flex-column"
    >
      
      
      <div>
        <div
          class="input-group p-2"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="input-group-text pf-prepend-icon"
            >
              <i
                class="fas fa-search fa-lg"
              />
            </span>
          </div>
          <input
            class="form-control d-block pf-search-input"
            placeholder="Search..."
            type="text"
          />
          <div
            class="input-group-append action-item"
          >
            <span
              class="input-group-text pf-append-icon"
            >
              <i
                class="fas fa-times"
              />
            </span>
          </div>
        </div>
        <div
          class="d-flex justify-content-start mx-2 mb-2"
        >
          <button
            class="btn btn-secondary clear-selections"
            disabled=""
          >
             Clear Selections 
          </button>
        </div>
        <div
          class="checkbox-container"
        >
          
          <label
            class="no-results font-italic text-center d-block"
          >
            No Results Found
          </label>
        </div>
      </div>
    </div>
  </div>
</pf-multi-select>
`;

exports[`UI/Common/Content - Multi Select should render its options when expanded 1`] = `
<pf-multi-select
  clearSelectionsClick={[Function EventEmitter]}
  displayNamePreview="false"
  highlightSelected="false"
  isExpanded={[Function Boolean]}
  isLoading="false"
  options={[Function Array]}
  remoteDataSourceService={[Function RemoteDataSourceService]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  selectedOptions={[Function Array]}
  selectedOptionsChange={[Function EventEmitter]}
  selectedValues={[Function Array]}
  selectedValuesChange={[Function EventEmitter]}
  textField={[Function String]}
  tooltipDir="undefined"
  valueField={[Function String]}
>
  <div
    class="multi-select-container"
    pfclickelsewhere=""
  >
    <div
      class="selections-summary row align-items-center"
    >
      
      <div
        class="select-facade action-item rounded form-control flex-grow-1 d-flex col"
      >
        <span
          class="flex-grow-1 ellipsis-overflowing-text"
          container="body"
          ng-reflect-container="body"
          ng-reflect-ngb-tooltip=""
        >
          
        </span>
        <span>
          <i
            class="k-i-arrow-s k-icon"
            style="padding-left: 0.3rem"
          />
        </span>
      </div>
    </div>
    
    <div
      class="selections-container d-flex flex-column"
    >
      
      
      <div>
        <div
          class="input-group p-2"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="input-group-text pf-prepend-icon"
            >
              <i
                class="fas fa-search fa-lg"
              />
            </span>
          </div>
          <input
            class="form-control d-block pf-search-input"
            placeholder="Search..."
            type="text"
          />
          <div
            class="input-group-append action-item"
          >
            <span
              class="input-group-text pf-append-icon"
            >
              <i
                class="fas fa-times"
              />
            </span>
          </div>
        </div>
        <div
          class="d-flex justify-content-start mx-2 mb-2"
        >
          <button
            class="btn btn-secondary clear-selections"
            disabled=""
          >
             Clear Selections 
          </button>
        </div>
        <div
          class="checkbox-container"
        >
          
          
          
          <label
            class="checkbox-label d-block ellipsis-overflowing-text m-0 p-2"
            ng-reflect-klass="checkbox-label d-block ellipsi"
            ng-reflect-ng-class=""
          >
            <input
              class="mr-1"
              type="checkbox"
            />
            Zoos and Zookeeping 
          </label>
          
          <label
            class="no-results font-italic text-center d-block"
          >
            No Results Found
          </label>
        </div>
      </div>
    </div>
  </div>
</pf-multi-select>
`;

exports[`UI/Common/Content - Multi Select should render the correct primary label text 1`] = `
<pf-multi-select
  clearSelectionsClick={[Function EventEmitter]}
  displayNamePreview="false"
  highlightSelected="false"
  isExpanded="false"
  isLoading="false"
  labelText={[Function String]}
  remoteDataSourceService={[Function RemoteDataSourceService]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  selectedOptions={[Function Array]}
  selectedOptionsChange={[Function EventEmitter]}
  selectedValues={[Function Array]}
  selectedValuesChange={[Function EventEmitter]}
  textField={[Function String]}
  tooltipDir="undefined"
  valueField={[Function String]}
>
  <div
    class="multi-select-container"
    pfclickelsewhere=""
  >
    <div
      class="selections-summary row align-items-center"
    >
      
      <div
        class="main-label mr-2"
      >
        job family
      </div>
      <div
        class="select-facade action-item rounded form-control flex-grow-1 d-flex col"
      >
        <span
          class="flex-grow-1 ellipsis-overflowing-text"
          container="body"
          ng-reflect-container="body"
          ng-reflect-ngb-tooltip=""
        >
          
        </span>
        <span>
          <i
            class="k-i-arrow-s k-icon"
            style="padding-left: 0.3rem"
          />
        </span>
      </div>
    </div>
    
  </div>
</pf-multi-select>
`;

exports[`UI/Common/Content - Multi Select should show the checkbox panel when expanded 1`] = `
<pf-multi-select
  clearSelectionsClick={[Function EventEmitter]}
  displayNamePreview="false"
  highlightSelected="false"
  isExpanded={[Function Boolean]}
  isLoading="false"
  remoteDataSourceService={[Function RemoteDataSourceService]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  selectedOptions={[Function Array]}
  selectedOptionsChange={[Function EventEmitter]}
  selectedValues={[Function Array]}
  selectedValuesChange={[Function EventEmitter]}
  textField={[Function String]}
  tooltipDir="undefined"
  valueField={[Function String]}
>
  <div
    class="multi-select-container"
    pfclickelsewhere=""
  >
    <div
      class="selections-summary row align-items-center"
    >
      
      <div
        class="select-facade action-item rounded form-control flex-grow-1 d-flex col"
      >
        <span
          class="flex-grow-1 ellipsis-overflowing-text"
          container="body"
          ng-reflect-container="body"
          ng-reflect-ngb-tooltip=""
        >
          
        </span>
        <span>
          <i
            class="k-i-arrow-s k-icon"
            style="padding-left: 0.3rem"
          />
        </span>
      </div>
    </div>
    
    <div
      class="selections-container d-flex flex-column"
    >
      
      
      <div>
        <div
          class="input-group p-2"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="input-group-text pf-prepend-icon"
            >
              <i
                class="fas fa-search fa-lg"
              />
            </span>
          </div>
          <input
            class="form-control d-block pf-search-input"
            placeholder="Search..."
            type="text"
          />
          <div
            class="input-group-append action-item"
          >
            <span
              class="input-group-text pf-append-icon"
            >
              <i
                class="fas fa-times"
              />
            </span>
          </div>
        </div>
        <div
          class="d-flex justify-content-start mx-2 mb-2"
        >
          <button
            class="btn btn-secondary clear-selections"
            disabled=""
          >
             Clear Selections 
          </button>
        </div>
        <div
          class="checkbox-container"
        >
          
          <label
            class="no-results font-italic text-center d-block"
          >
            No Results Found
          </label>
        </div>
      </div>
    </div>
  </div>
</pf-multi-select>
`;

exports[`UI/Common/Content - Multi Select should show the loading indicator when loading 1`] = `
<pf-multi-select
  clearSelectionsClick={[Function EventEmitter]}
  displayNamePreview="false"
  highlightSelected="false"
  isExpanded={[Function Boolean]}
  isLoading={[Function Boolean]}
  remoteDataSourceService={[Function RemoteDataSourceService]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  selectedOptions={[Function Array]}
  selectedOptionsChange={[Function EventEmitter]}
  selectedValues={[Function Array]}
  selectedValuesChange={[Function EventEmitter]}
  textField={[Function String]}
  tooltipDir="undefined"
  valueField={[Function String]}
>
  <div
    class="multi-select-container"
    pfclickelsewhere=""
  >
    <div
      class="selections-summary row align-items-center"
    >
      
      <div
        class="select-facade action-item rounded form-control flex-grow-1 d-flex col"
      >
        <span
          class="flex-grow-1 ellipsis-overflowing-text"
          container="body"
          ng-reflect-container="body"
          ng-reflect-ngb-tooltip=""
        >
          
        </span>
        <span>
          <i
            class="k-i-arrow-s k-icon"
            style="padding-left: 0.3rem"
          />
        </span>
      </div>
    </div>
    
    <div
      class="selections-container d-flex flex-column"
    >
      
      <span
        class="loading d-block mt-2 mb-2 text-center"
      >
        <pf-loading-indicator />
      </span>
      
    </div>
  </div>
</pf-multi-select>
`;
